@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.3-3
-Date: 2014-05-30
-Packaged: 2014-05-30; dylan
+Version: 1.3-4
+Date: 2014-09-16
+Packaged: 2014-09-16; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
