@@ -1,4 +1,4 @@
-# get the series extent from SoilWeb KMZ service and plot on Google Maps
+# get the series extent fromSEE pre-cached GeoJSON data and plot on Google Maps
 seriesExtentAsGmap <- function(s, timeout=60, exp=1.25) {
 	if(!require(dismo))
 		stop('please install the `dismo` package', call.=FALSE)
@@ -22,27 +22,60 @@ seriesExtentAsGmap <- function(s, timeout=60, exp=1.25) {
 
 
 # get the series extent from SoilWeb KMZ service and return as SpatialPolygonsDataFrame
+# seriesExtent <- function(s, timeout=60) {
+# 	if(!require(rgdal))
+# 		stop('please install the `rgdal` package', call.=FALSE)
+# 	
+# 	# make URL to SoilWeb KMZ
+# 	u <- URLencode(paste('http://casoilresource.lawr.ucdavis.edu/soil_web/reflector_api/soils.php?what=soil_series_extent&q_string=', s, '&query_level=mapunit', sep=''))
+# 	
+# 	# init temp files / dirs
+# 	td <- tempdir()
+# 	tf.kmz <- tempfile(fileext='kmz')
+#   
+# 	# note that we are transfering as binary (KMZ), extend timeout if needed
+# 	download.file(url=u, destfile=tf.kmz, mode='wb', extra=c(timeout=timeout))
+# 	
+# 	# readOGR can't open KMZ files directly, so we must unzip
+# 	unzip(zipfile=tf.kmz, files='doc.kml', exdir=td)
+# 	
+# 	# load into sp object and clean-up
+# 	x <- readOGR(dsn=file.path(td, 'doc.kml'), layer='Soil Series Extent')
+# 	unlink(tf.kmz)
+# 	
+# 	# return in WGS84 GCS
+# 	return(x)
+# }
+
+
+# get pre-cached series extent GeoJSON from SoilWeb server
 seriesExtent <- function(s, timeout=60) {
-	if(!require(rgdal))
-		stop('please install the `rgdal` package', call.=FALSE)
-	
-	# make URL to SoilWeb KMZ
-	u <- URLencode(paste('http://casoilresource.lawr.ucdavis.edu/soil_web/reflector_api/soils.php?what=soil_series_extent&q_string=', s, '&query_level=mapunit', sep=''))
-	
-	# init temp files / dirs
-	td <- tempdir()
-	tf.kmz <- tempfile(fileext='kmz')
+  if(!require(rgdal))
+    stop('please install the `rgdal` package', call.=FALSE)
   
-	# note that we are transfering as binary (KMZ), extend timeout if needed
-	download.file(url=u, destfile=tf.kmz, mode='wb', extra=c(timeout=timeout))
-	
-	# readOGR can't open KMZ files directly, so we must unzip
-	unzip(zipfile=tf.kmz, files='doc.kml', exdir=td)
-	
-	# load into sp object and clean-up
-	x <- readOGR(dsn=file.path(td, 'doc.kml'), layer='Soil Series Extent')
-	unlink(tf.kmz)
-	
-	# return in WGS84 GCS
-	return(x)
+  # encode series name
+  s <- gsub(pattern=' ', replacement='_', x=tolower(s))
+  
+  # base URL to cached data
+  u <- URLencode(paste0('http://casoilresource.lawr.ucdavis.edu/series-extent-cache/json/', s, '.json'))
+  
+  # init temp files / dirs
+  td <- tempdir()
+  tf.json <- tempfile(fileext='json')
+  
+  # download GeoJSON file
+  download.file(url=u, destfile=tf.json, extra=c(timeout=timeout), quiet=TRUE)
+  
+  ogrListLayers(tf.json)
+  
+  # load into sp object and clean-up
+  x <- readOGR(dsn=tf.json, layer='OGRGeoJSON', verbose=FALSE)
+  unlink(tf.json)
+  
+  # return in WGS84 GCS
+  return(x)
 }
+
+
+
+
