@@ -2,7 +2,7 @@
 \alias{seriesExtent}
 \alias{seriesExtentAsGmap}
 \title{Get/Display Soil Series Extent}
-\description{Get or display the spatial extent of a named soil series using the SoilWeb query facility.}
+\description{Get or display the spatial extent of a named soil series using the Series Extent Explorer.}
 \usage{
 seriesExtent(s, timeout=60)
 seriesExtentAsGmap(s, timeout=60, exp=1.25)
@@ -12,11 +12,11 @@ seriesExtentAsGmap(s, timeout=60, exp=1.25)
 	\item{timeout}{time that we are willing to wait for a response, in seconds}
 	\item{exp}{expansion factor used to expand Google Maps region}
 }
-\details{Soil series extent data are generated as KMZ files, and cached on the SoilWeb server. Initial creation of the KMZ extent may require 1-10+ seconds depending on the spatial extent of the series and server load. All subsequent requests for the same series will return cached data. The cache is purged whenever soil survey data are synced with the official repository.}
+\details{Soil series extent data are downloaded from a static cache of GeoJSON files on SoilWeb servers. Cached data are typically updated annually.}
 
 \value{when calling \code{seriesExtent}, a SpatialPolygonsDataFrame object}
 
-\references{http://casoilresource.lawr.ucdavis.edu/}
+\references{http://casoilresource.lawr.ucdavis.edu/see}
 
 \author{D.E. Beaudette}
 
